# cse485-capstone

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  utils.py
CaSiNo/: CaSiNo.py  requirements.txt
LoRA-Instruction-Tune/: LoRA-IT.py
agents/: __init__.py  buyer.py  seller.py
clients/: __init__.py  local_chat.py  openai_chat.py
data/: DATASETS.md  DataSets.md  download.py
data/amazon_history_price/: automotive.json  baby-products.json  beauty.json  books.json  electronics.json  health-personal-care.json  home-kitchen.json  industrial-scientific.json  movies-tv.json  music.json  other.json  patio-lawn-garden.json  pet-supplies.json  software.json  sports-outdoors.json  tools-home-improvement.json  toys-games.json  video-games.json
data/casino/: index.json
finetune/: USAGE.md  format_craigslist.py  format_dataset.py  gwen.py  lora_example.py
finetune/gwen_adapter_v0/pretrained_models/Qwen2.5_7B_Instruct-lora/: adapter_config.json
finetune/gwen_adapter_v0/training_output/Qwen2.5_7B_Instruct-lora/checkpoint-125/: rng_state.pth  trainer_state.json
finetune/gwen_adapter_v0/training_output/Qwen2.5_7B_Instruct-lora/checkpoint-250/: rng_state.pth  trainer_state.json
prompts/system/: buyer.txt  negotiator.txt  seller.txt
prompts/user/: buyer.txt  seller.txt
test/: example.py  prompt.json
